Creamos carruseles en el proyecto

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/html/portafolio.html" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="#">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="#">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="#">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="#">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/html/" role="button" aria-expanded="false">Tienda</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/src/html/tienda.html">Tienda</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
                   <li><a class="dropdown-item" href="#">Manual Mula</a></li>
@@ -100,6 +100,110 @@
         </div>
       </section>
 
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-12">      
+                    <div class="carousel">
+                        <input type="radio" name="slides" checked="checked" id="slide-1">
+                        <input type="radio" name="slides" id="slide-2">
+                        <input type="radio" name="slides" id="slide-3">
+                        <input type="radio" name="slides" id="slide-4">
+                        <input type="radio" name="slides" id="slide-5">
+                        <input type="radio" name="slides" id="slide-6">
+                        <ul class="carousel__slides">
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1041/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Tim Marshall</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1043/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Christian Joudrey</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1044/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Steve Carter</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1045/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Aleksandra Boguslawska</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1049/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Rosan Harmens</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li class="carousel__slide">
+                                <figure>
+                                    <div>
+                                        <img src="https://picsum.photos/id/1052/800/450" alt="">
+                                    </div>
+                                    <figcaption>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                        <span class="credit">Photo: Annie Spratt</span>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                        </ul>
+                        <ul class="carousel__thumbnails row-cols-1 row-cols-md-1">
+                            <li>
+                                <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+                            </li>
+                            <li>
+                                <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+                            </li>
+                            <li>
+                                <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+                            </li>
+                            <li>
+                                <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+                            </li>
+                            <li>
+                                <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+                            </li>
+                            <li>
+                                <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+                            </li>
+                        </ul>
+                    </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <section>
         <div class="container my-5 bg-danger text-center h-100">
@@ -143,9 +247,9 @@
 
       <section>
         <div class="container my-5">
-          <div class="row">
+          <div class="row row-cols-1 row-cols-md-2 ">
             <div class="col-6">
-              <img src="./assets/img/213346047_874435320168531_123659390697797422_n.jpg.png" class="w-75 img-fluid" alt="">
+              <img src="./assets/img/213346047_874435320168531_123659390697797422_n.jpg.png" class="w-100 img-fluid" alt="">
             </div>
             <div class="col-6">
               <h4>Nuestros productos</h4>
@@ -168,7 +272,7 @@
 					 <p>Como empresa en sisdecar nos encargamos de dar soluciones a nuestros clientes y lo que brindamos es una forma mas segura,facil y rapida para realizar los traslados de carga, en sisdecar estamos contentos de contar contigo y brindarte la mayor seguridad a la hora de carpar un vehiculo pesado.</p>
 				</div>
         <div class="col-6">
-					<img src="./assets/img/84402016_516334459311954_7966699902086414336_n.jpg" class="img-fluid w-75" alt="">
+					<img src="./assets/img/84402016_516334459311954_7966699902086414336_n.jpg" class="img-fluid w-100" alt="">
 				</div>
 			</div>
 		</div>
@@ -210,11 +314,18 @@
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
                     Dropdown button
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
+                      <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
+                      <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
+                      <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
+                      <li><a class="dropdown-item" href="#">Manual Mula</a></li>
+                      <li><a class="dropdown-item" href="#">Protector Lateral</a></li>
+                      <li><a class="dropdown-item" href="#">Cintas Reflectivas</a></li>
+                      <li><a class="dropdown-item" href="#">Discos Abrasivos</a></li>
+                      <li><a class="dropdown-item" href="#">Repuestos</a></li>
+                      <li><a class="dropdown-item" href="#">Malacates</a></li>
+                    </ul>
                 </div>
             
             </div>
@@ -224,8 +335,8 @@
        <div class="container my-5">
         <div class="card logosisdecar">
           <div class="row">
-              <div class="col-6">
-                 <img src="./assets/img/presentaciontarjeta-logo.png"  class="img-fluid  m-xxl-auto d-block mx-auto" alt="">
+              <div class="col-6 my-5">
+                 <img src="./assets/img/MAURICIO.jpg"  class="img-fluid  m-xxl-auto d-block mx-auto" alt="">
               </div>
               <div class="col-6">
                 <div class="card  text-white bg-secondary  text-center my-5 mx-5">
@@ -236,6 +347,62 @@
           </div>
         </div>
        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-3">
+            <div class="col-12">
+              <div class="slider my-4">
+                <div class="slide-track">
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+                  </div>
+                  <div class="slide">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+                  </div>
+                </div>
+              </div>
+       
+            </div>
+          </div>
+        </div>
       </section>
   </main>
   <footer class="bg-dark text-light d-block text-center ">
