--- a/src/html/Quienessomos.html
+++ b/src/html/Quienessomos.html
@@ -19,7 +19,7 @@
 </head>
 <body class="fuente " id="1">
   <header>
-    <nav class="navbar w-100 navbar-expand-lg bg-dark navbar-dark navegacion ">
+    <nav class="navbar w-100 navbar-expand-lg bg-yellow navegacion ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Sisdecar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,15 +34,15 @@
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="#">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="#">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="#">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="#">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -66,9 +66,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="/src/html/contactos.html">Contactos</a>
               </li>
-              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                <i class="bi bi-box-arrow-in-right"></i> Registrate
-             </button>
+        
            
             </ul>
           </div>
@@ -77,7 +75,8 @@
   </header>
   <main>
       <section class="">
-        <video  class="w-100 h-25 animate__animated animate__tada" src="./assets/video/SISDECARSAS(1).mp4" muted autoplay loop></video>        
+       <img src="../../assets/img/bannerquienesomos.jpeg" class="w-100 h-100 img-fluid " alt="">
+       <h1 class="bannerquienessomos text-light">Sobre Nosotros</h1>      
       </section>
 
 
@@ -182,8 +181,103 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-12">
-					fotos
+				<div class="col-12">      
+                <div class="carousel">
+                    <input type="radio" name="slides" checked="checked" id="slide-1">
+                    <input type="radio" name="slides" id="slide-2">
+                    <input type="radio" name="slides" id="slide-3">
+                    <input type="radio" name="slides" id="slide-4">
+                    <input type="radio" name="slides" id="slide-5">
+                    <input type="radio" name="slides" id="slide-6">
+                    <ul class="carousel__slides">
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1041/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Tim Marshall</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1043/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Christian Joudrey</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1044/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Steve Carter</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1045/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Aleksandra Boguslawska</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1049/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Rosan Harmens</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="carousel__slide">
+                            <figure>
+                                <div>
+                                    <img src="https://picsum.photos/id/1052/800/450" alt="">
+                                </div>
+                                <figcaption>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    <span class="credit">Photo: Annie Spratt</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
+                    <ul class="carousel__thumbnails row-cols-1 row-cols-md-1">
+                        <li>
+                            <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+                        </li>
+                        <li>
+                            <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+                        </li>
+                        <li>
+                            <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+                        </li>
+                        <li>
+                            <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+                        </li>
+                        <li>
+                            <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+                        </li>
+                        <li>
+                            <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+                        </li>
+                    </ul>
+                </div>      
 				</div>
 			</div>
 		</div>
@@ -255,9 +349,9 @@
       <section>
        <div class="container my-5">
         <div class="card logosisdecar " >
-          <div class="row">
-              <div class="col-6">
-                 <img src="./assets/img/presentaciontarjeta-logo.png"  class="img-fluid d-block" alt="">
+          <div class="row ">
+              <div class="col-6 my-5">
+                 <img src="/assets/img/MAURICIO.jpg"  class="img-fluid m-xxl-auto d-block mx-auto" alt="">
               </div>
               <div class="col-6">
                 <div class="card  text-white bg-secondary  text-center my-5 mx-5">
