--- a/src/html/contactos.html
+++ b/src/html/contactos.html
@@ -19,7 +19,7 @@
 </head>
 <body class="fuente " id="1">
   <header>
-    <nav class="navbar w-100 navbar-expand-lg bg-dark navbar-dark navegacion ">
+    <nav class="navbar w-100 navbar-expand-lg bg-yellow navegacion ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Sisdecar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,22 +33,22 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="#">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="#">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="#">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="#">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tienda</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./src/html/portafolio.html">Tienda</a></li>
+                  <li><a class="dropdown-item" href="/src/html/tienda.html">Tienda</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
                   <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
@@ -66,9 +66,7 @@
               <li class="nav-item">
                 <a class="nav-link active" href="/src/html/contactos.html">Contactos</a>
               </li>
-              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                <i class="bi bi-box-arrow-in-right"></i> Registrate
-             </button>
+             
            
             </ul>
           </div>
@@ -76,8 +74,8 @@
     </nav>
   </header>
   <main>
-      <section class="">
-        <img src="/assets/img/presentaciontarjeta-logo.png" class="w-75 -h-75 img-fluid d-block" alt="">      
+      <section class="bg-yellow w-100">
+        <img src="/assets/img/MAURICIO.jpg" class="w-25 h-25 img-fluid d-block m-xxl-auto mx-auto" alt="">      
       </section>
 
 
@@ -157,7 +155,7 @@
         <div class="card logosisdecar">
           <div class="row">
               <div class="col-6">
-                 <img src="./assets/img/presentaciontarjeta-logo.png"  class="img-fluid d-block" alt="">
+                 <img src=""  class="img-fluid d-block" alt="">
               </div>
               <div class="col-6">
                 <div class="card  text-white bg-secondary  text-center my-5 mx-5">
