--- a/src/html/tienda.html
+++ b/src/html/tienda.html
@@ -34,15 +34,15 @@
                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="/src/html/portafolio.html" role="button" aria-expanded="false">Portafolio</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/src/html/portafolio.html">Portafolio</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Volqueta</a></li>
-                  <li><a class="dropdown-item" href="#">Autocarpado Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Manual Mula</a></li>
-                  <li><a class="dropdown-item" href="#">Protector Lateral</a></li>
-                  <li><a class="dropdown-item" href="#">Cintas Reflectivas</a></li>
-                  <li><a class="dropdown-item" href="#">Discos Abrasivos</a></li>
-                  <li><a class="dropdown-item" href="#">Repuestos</a></li>
-                  <li><a class="dropdown-item" href="#">Malacates</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio1">Autocarpado Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio2">Manual Volqueta</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio3">Autocarpado Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio4">Manual Mula</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio5">Protector Lateral</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio6">Cintas Reflectivas</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio7">Discos Abrasivos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio8">Repuestos</a></li>
+                  <li><a class="dropdown-item" href="/src/html/portafolio.html#fotosportafolio9">Malacates</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -175,8 +175,8 @@
        <div class="container my-5">
         <div class="card logosisdecar">
           <div class="row">
-              <div class="col-6">
-                 <img src="./assets/img/presentaciontarjeta-logo.png"  class="img-fluid d-block" alt="">
+              <div class="col-6 my-5">
+                 <img src="/assets/img/MAURICIO.jpg"  class="img-fluid m-xxl-auto d-block mx-auto" alt="">
               </div>
               <div class="col-6">
                 <div class="card  text-white bg-secondary  text-center my-5 mx-5">
